# TaskManager

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  Scheduler.cpp  Scheduler.hh  Task.hpp  ThreadManager.cpp  ThreadManager.hh  ThreadPool.cpp  ThreadPool.hh  ThreadPool_base.hpp  TimedTask.hpp  Worker.cpp  Worker.hh  configure.sh  main.cpp
API/html/: Manager_8hpp_source.html  Module_8hpp_source.html  PriorityQueue_8hpp_source.html  Scheduler_8hpp_source.html  Task_8hpp_source.html  Threadpool_8hpp_source.html  annotated.html  classTask_1_1Detail_1_1PriorityQueue-members.html  classTask_1_1Detail_1_1PriorityQueue.html  classTask_1_1Detail_1_1PriorityQueue__coll__graph.map  classTask_1_1Detail_1_1PriorityQueue__coll__graph.md5  classTask_1_1Detail_1_1PriorityQueue__inherit__graph.md5  classTask_1_1Detail_1_1Threadpool-members.html  classTask_1_1Detail_1_1Threadpool.html  classTask_1_1Detail_1_1TimedTask-members.html  classTask_1_1Detail_1_1TimedTask.html  classTask_1_1Manager-members.html  classTask_1_1Manager.html  classTask_1_1Scheduler-members.html  classTask_1_1Scheduler.html  classes.html  dir_47bd46ae371bf83f8edc1f8cbff6fa58.html  dir_cffb71d373308e5e259ce63554ddef1f.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  (+1 more)
API/html/search/: all_1.js  all_2.js  all_4.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
API/latex/: annotated.tex  classTask_1_1Detail_1_1PriorityQueue.tex  classTask_1_1Detail_1_1PriorityQueue__coll__graph.md5  classTask_1_1Detail_1_1PriorityQueue__inherit__graph.md5  classTask_1_1Detail_1_1Threadpool.tex  classTask_1_1Detail_1_1TimedTask.tex  classTask_1_1Manager.tex  classTask_1_1Scheduler.tex  dir_47bd46ae371bf83f8edc1f8cbff6fa58.tex  dir_cffb71d373308e5e259ce63554ddef1f.tex  hierarchy.tex  index.tex  refman.tex
cmake/: CheckCompiler.cmake  CheckCompilerFlags.cmake  CleanCoverage.cmake  CompilerFlags.cmake  EnableClangTidy.cmake  EnableTestCoverage.cmake  EnableTests.cmake  ExternalClangTidy.cmake  ExternalGTest.cmake  FindClangTidy.cmake  FindGCOVR.cmake  FindLCOV.cmake  ResolveClangTidy.cmake  ResolveGTest.cmake  Sources.cmake
inc/: Scheduler.hh  Task.hpp  ThreadManager.hh  ThreadPool.hh  Worker.hh
include/: Manager.hh  Module.hh  Scheduler.hh  Task.hpp  ThreadManager.hh  ThreadPool.hh  Worker.hh
include/TaskManager/: Manager.hpp  Module.hpp  Scheduler.hpp
include/TaskManager/detail/: PriorityQueue.hpp  Task.hpp  Threadpool.hpp
include/detail/: PriorityQueue.hpp  Task.hpp  ThreadPool.hh  Threadpool.hh
lib/: CMakeLists.txt
src/: Manager.cpp  Module.cpp  Scheduler.cpp  ThreadManager.cpp  ThreadPool.cpp  Worker.cpp  main.cpp
src/detail/: ThreadPool.cpp  Threadpool.cpp
test/: Async.hh  Async.hpp  ManagerTest.cpp  ManagerTest.hh  ManagerTest.hpp  SchedulerTest.cpp  SchedulerTest.hh  SchedulerTest.hpp  main.cpp
test/detail/: PriorityQueueTest.cpp  PriorityQueueTest.hh  PriorityQueueTest.hpp  ThreadPoolTest.cpp  ThreadPoolTest.hh  ThreadpoolTest.cpp  ThreadpoolTest.hh  ThreadpoolTest.hpp
